Use posix shared memory for transmitting VR sensor status.

--- a/psvrd/CMakeLists.txt
+++ b/psvrd/CMakeLists.txt
@@ -9,9 +9,10 @@ set(PSVRD_SOURCES
 )
 
 add_executable(psvrd ${PSVRD_SOURCES})
-target_link_libraries(psvrd ${LIBUSB_LIB} m)
+target_link_libraries(psvrd ${LIBUSB_LIB} m rt)
 
 add_library(psvrd-client SHARED psvrd-client.c message_queue.c)
+target_link_libraries(psvrd-client rt)
 
 add_executable(psvrd_control psvrd_control.c)
 target_link_libraries(psvrd_control psvrd-client)
